<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center"
        android:text="@string/register"
        android:textColor="@color/black"
        android:textSize="48sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/register_hint"
        android:textColor="@color/gray_200"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/tv_register" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_register"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="167dp"
        android:background="@drawable/layout_blue_bg"
        android:paddingHorizontal="16dp"
        android:paddingTop="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_hint">


        <TextView
            android:id="@+id/tv_mobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/name"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ly_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_mobile">

            <EditText
                android:id="@+id/ed_mobile_no"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:layout_marginEnd="12dp"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/first_name_hint"
                android:inputType="text"
                android:paddingHorizontal="10dp"
                android:paddingVertical="12dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/ed_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_bg"
                android:hint="@string/last_name_hint"
                android:inputType="text"
                android:padding="12dp"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/email"
            android:textColor="@color/black"

            app:layout_constraintStart_toStartOf="@id/ly_mobile"
            app:layout_constraintTop_toBottomOf="@id/ly_mobile" />

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:text="@string/email_hint"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email" />

        <TextView
            android:id="@+id/tv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/password"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="@id/ly_mobile"
            app:layout_constraintTop_toBottomOf="@id/ed_email" />

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_text_bg"
            android:drawableEnd="@drawable/blind"
            android:inputType="textPassword"
            android:padding="12dp"
            android:text="tttttttttttt"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_password" />

        <CheckBox
            android:id="@+id/cb_agree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blue_400"
            android:text="@string/checkbox_desc"
            app:layout_constraintTop_toBottomOf="@+id/ed_password" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/blue_900"
            android:text="@string/create_account"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/ly_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_agree" />

        <LinearLayout
            android:id="@+id/ly_google"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/google_bg"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_login">

            <ImageView
                android:id="@+id/iv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/google" />

            <TextView
                android:id="@+id/tv_google"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/google_sign"
                android:textColor="@color/gray_200"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingHorizontal="66dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ly_google">

            <TextView
                android:id="@+id/tv_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/google_sign_hint"
                android:textColor="@color/black"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>